# libzio

./: .gitignore  README.md  asio.cpp  compile_commands.json  gen.cpp  makefile  uringtest  uringtest.cpp  zio  zio-coroutine  zio-coroutine.cpp  zio-uring  zio-uring.cpp  zio.cpp  zio_ip.hpp
.cache/clangd/index/: uringtest.cpp.093762189C6017BC.idx  zio-coroutine.cpp.A79D79CDE6550EC6.idx  zio-uring.cpp.E97D7596AF038EA0.idx  zio.cpp.8ACD74802FC6BB48.idx  zio_ip.hpp.8345FE0E16C12124.idx
uring/: .gitignore  CMakeLists.txt  compile_commands.json  main  main.cpp  makefile  to-do  uring.code-workspace  uringtest.cpp  uringtest.h  zio_ip.hpp  zio_types.hpp
uring/.cache/clangd/index/: main.cpp.00A1BEA3ED4D9F9A.idx  uringtest.cpp.C9AEA296062E54D8.idx  uringtest.h.B489527E8E5AC852.idx  zio_ip.hpp.F0731A8CF12C4C29.idx
uring/build2/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
uring/build2/examples/: Makefile  zio_example_http_server  zio_example_tcp_chatroom  zio_example_tcp_connect_server  zio_example_tcp_echo_server
uring/example/: compile_commands.json  makefile  tcp_chatroom.cpp  tcp_chatroom.out  tcp_connect_server.cpp  tcp_connect_server.out  tcp_echo_server.cpp  tcp_echo_server.out
uring/examples/: CMakeLists.txt  http_server.cpp  input.cpp  socks_proxy.cpp  tcp_chatroom.cpp  tcp_connect_server.cpp  tcp_echo_server.cpp
uring/include/: uringtest.h  zio_buffer.hpp  zio_http.hpp  zio_ip.hpp  zio_types.hpp
